scrollbar fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -51,8 +51,10 @@ body {
 	margin: 0;
 	position: relative;
 	min-height: 100vh;
-	scroll-behavior: smooth;
 	font-size: 12px;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+	overflow: auto;
 }
 
 ul {
